syntax = "proto3";

option go_package = "discord/pkg/proto";
import "schema/message.proto";

package protoservice.message;

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc EditMessage(EditMessageRequest) returns (EditMessageResponse);
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
}

message SendMessageRequest {
  int32 channel_id = 1 ;
  string content = 2 ;
  int32 reply_to_message_id = 3;
}

message SendMessageResponse {
  protoschema.Message message = 1;
  bool success = 2;
}

message GetMessagesRequest {
  int32 channel_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetMessagesResponse {
  repeated protoschema.Message messages = 1;
}

message EditMessageRequest {
  int32 message_id = 1;
  string content = 2;
}

message EditMessageResponse {
  protoschema.Message message = 1;
  bool success = 2;
}

message DeleteMessageRequest {
  int32 message_id = 1;
}

message DeleteMessageResponse {
  bool success = 1;
}
